chore: 불필요한 import, repository 파일 삭제